hphp/hack/test/typecheck/reactive/lambda_mutable2.php.like_types.exp
File "lambda_mutable2.php", line 7, characters 17-33:
Invalid argument (Typing[4110])
File "rx/functions.hhi", line 30, characters 15-15:
Some type constraint(s) are violated here
File "rx/functions.hhi", line 30, characters 15-15:
T is a constrained type parameter
File "lambda_mutable2.php", line 6, characters 53-55:
Expected Foo
File "rx/functions.hhi", line 30, characters 15-15:
But got dynamic
